<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#123456"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/logo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <EditText
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:nextFocusForward="@id/passwordEt"
            android:id="@+id/emailEt"
            android:inputType="text"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="20dp"
        android:id="@+id/password_toggle">
        <EditText
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="#ffffff"
            android:id="@+id/passwordEt"
            android:inputType="text"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#04ea00"
        android:id="@+id/loginBtn"
        android:text="@string/login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_your_password"
        android:id="@+id/passwordReset"/>

    <!--kad za nešto stavimo wrap content to znači da točno
    veličinom odgovara svom sadržaju-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:text="@string/not_registered" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#04ea00"
            android:id="@+id/registerTv"
            android:text="@string/register" />

    </LinearLayout>

</LinearLayout>